tests/ui/feature-gates/feature-gate-generic-const-parameter-types.normal.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/feature-gate-generic-const-parameter-types.rs:7:50
   |
LL | struct MyADT<const LEN: usize, const ARRAY: [u8; LEN]>;
   |                                                  ^^^ the type must not depend on the parameter `LEN`

error: `[u8; LEN]` is forbidden as the type of a const generic parameter
  --> $DIR/feature-gate-generic-const-parameter-types.rs:7:45
   |
LL | struct MyADT<const LEN: usize, const ARRAY: [u8; LEN]>;
   |                                             ^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0770`.
